fix: log level parsing

--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -6,6 +6,6 @@ services:
       context: ../
       dockerfile: ./docker/Dockerfile
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:ro
+     # - /var/run/docker.sock:/var/run/docker.sock:ro
       - ../config.yaml:/app/config.yaml
     #image: dockdns
