--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,5 +1,9 @@
 interval: 300
 
+log:
+  level: debug
+  format: simple
+
 provider:
   name: cloudflare
   apiToken: ...
@@ -8,7 +12,7 @@ provider:
 dns:
   a: true
   aaaa: false
-  ttl: 600
+  defaultTTL: 300
   purgeUnknown: true
 
 domains:
