--- a/.github/workflows/go_vendorhash.yaml
+++ b/.github/workflows/go_vendorhash.yaml
@@ -42,10 +42,10 @@ jobs:
         if: steps.check-diff.outputs.diff-exists == 'true'
         run: |
           git config --global user.name "Tarow[bot]"
-          git config --global user.email "tarow[bot]@users.noreply.github.com"
+          git config --global user.email "195547385+tarow[bot]@users.noreply.github.com"
 
           git add flake.nix
-          git commit --author "tarow[bot]@users.noreply.github.com" -m "chore: Update Go vendorHash"
+          git commit -m "chore: Update Go vendorHash"
           git push origin HEAD
         env:
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
