--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,7 +58,7 @@ jobs:
         with:
           context: .
           file: docker/Dockerfile
-          push: ${{ !startsWith(github.ref_name, 'renovate/') }}
+          push: ${{ !startsWith(github.ref_name, 'renovate/') &&  github.event_name != 'pull_request' }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
