--- a/config.example.yaml
+++ b/config.example.yaml
@@ -12,6 +12,16 @@ zones:
   - name: somedomain.com
     provider: cloudflare
     apiToken: ... # Can also be passed as environment variable: SOMEDOMAIN_COM_API_TOKEN
+    
+  # Example RFC2136 configuration
+  # - name: example.com
+  #   provider: rfc2136
+  #   apiHost: 192.168.1.1
+  #   apiPort: 53
+  #   protocol: udp    # Optional: tcp or udp (defaults to udp)
+  #   tsigName: update-key
+  #   tsigAlgo: hmac-sha256
+  #   apiToken: ... # TSIG secret key
 
 dns:
   a: true
