--- a/config.example.yaml
+++ b/config.example.yaml
@@ -12,7 +12,8 @@ zones:
   - name: somedomain.com
     provider: cloudflare
     apiToken: ... # Can also be passed as environment variable: SOMEDOMAIN_COM_API_TOKEN
-
+    zoneID: 
+    
 dns:
   a: true
   aaaa: false
