--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -3,6 +3,8 @@ services:
   dockdns:
     image: ghcr.io/tarow/dockdns:main
     restart: unless-stopped
+    environment:
+      - HOST_HOSTNAME=${HOSTNAME}  # Pass the host machine's hostname to the container
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ../config.yaml:/app/config.yaml
