--- a/docker/compose-local.yaml
+++ b/docker/compose-local.yaml
@@ -7,7 +7,7 @@ services:
       dockerfile: ./docker/Dockerfile
     restart: unless-stopped
     environment:
-      - HOST_HOSTNAME=${HOSTNAME}  # Pass the host machine's hostname to the container
+      - HOST_HOSTNAME=dev  # Pass the host machine's hostname to the container
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ../config.yaml:/app/config.yaml
